# EE_631

./: .gitignore  hw1.py
HW1/: task2.py  task3.py
HW2/: cam.yml  capture_imgs.py  my_cam.yml  task1.py  task2.py  task3.py  task4.py  task5.py  task6.py
HW3/: task1.py  task2.py  task3.py  task4.py
HW3/params/: right_cam.yml
HW4/: task1.py  task2.py  task3.py
HW4/params/: left_cam.yml  rectify.yml
HW5/: merge_videos.py  task1.py  task2.py
HW6/: CMakeLists.txt  guess_params.yaml  seth.cpp  task1.cpp  task1.py  task2.cpp  task3.cpp
HW7/: CMakeLists.txt  Camera_Parameters.yaml  plot_task1.py  plot_task2.py  plot_task3.py  task1.cpp  task1_data.txt  task2.cpp  task2_data.txt  task3.cpp  task3_data.txt
HW8/: CMakeLists.txt  task1.cpp  task2.cpp
HW8/BYU_Hallway_Sequence/: Camera_Parameters.yaml  data.txt  plot_results.py
HW8/BYU_Hallway_Sequence/__MACOSX/: ._BYU Hallway Camera Parameters.txt  ._BYU Hallway Sequence
HW8/VO_Practice_Sequence/: Camera_Parameters.yaml  data.txt  plot_results.py  truth.txt
HW8/VO_Practice_Sequence/__MACOSX/: ._VO Practice Camera Parameters.txt  ._VO Practice Sequence  ._VO Practice Sequence R and T.txt
